# intensifies

./: Cargo.toml  Dockerfile
src/: cli.rs  image_processing.rs  main.rs  web.rs
static/: index.html
